chore: update npm deps and bump version

--- a/src/assets/js/admin/admin.scss
+++ b/src/assets/js/admin/admin.scss
@@ -61,7 +61,8 @@
 	max-width: 960px;
 	margin-top: 2rem;
 
-	&.components-panel, .components-panel {
+	&.components-panel,
+	.components-panel {
 		background: none;
 		border: none;
 
