feat!: refactor settings handling

--- a/packages/admin/admin.scss
+++ b/packages/admin/admin.scss
@@ -1,4 +1,4 @@
-#wpgraphql_login_settings {
+#wpgraphql_login_settings { // stylelint-disable-line selector-id-pattern
 
 	.components-placeholder {
 		background: #f1f1f1;
