--- a/packages/admin/components/layout/header/menu/styles.module.scss
+++ b/packages/admin/components/layout/header/menu/styles.module.scss
@@ -21,3 +21,13 @@
 		}
 	}
 }
+
+.dirtyIndicator {
+	background-color: #3c434a;
+	border-color: 1px solid var(--wp-admin-theme-color-darker-20);
+	border-radius: 50%;
+	height: .5em;
+	width: .5em;
+	display: inline-block;
+	margin-left: .5em;
+}
